# napalm-huawei-vrp

./: README.md  pyproject.toml  setup.py
napalm_huawei_vrp/: huawei_vrp.py
test/unit/mocked_data/test_get_vlans/vrp5/: display_cur_conf_vlan.txt  display_vlan.txt
test/unit/mocked_data/test_get_vlans/vrp8/: expected_result.json
