[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napalm-huawei-vrp"
version = "1.3.0"
description = "Network Automation and Programmability Abstraction Layer with Multi-vendor support,Driver for VRP OS"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "Locus Li", email = "locus@byto.top"},
    {name = "Michael Alvarez", email = "codingnetworks@gmail.com"}
]
classifiers = [
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/napalm-automation-community/napalm-huawei-vrp"
Repository = "https://github.com/napalm-automation-community/napalm-huawei-vrp"

[project.scripts]
cl_napalm_configure = "napalm.base.clitools.cl_napalm_configure:main"
cl_napalm_test = "napalm.base.clitools.cl_napalm_test:main"
cl_napalm_validate = "napalm.base.clitools.cl_napalm_validate:main"
napalm = "napalm.base.clitools.cl_napalm:main"

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black>=23.0",
    "flake8",
    "mypy>=1.0",
    "pre-commit",
    "pylama",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".git", ".tox", ".env", "dist", "build", "south_migrations", "migrations", "napalm/base/test"]
addopts = [
    "--cov=napalm",
    "--cov-report=term-missing",
    "-vs",
    "--pylama"
]
json_report = "report.json"
jsonapi = true

[tool.coverage.run]
include = ["napalm_vrp/*"]

[tool.coverage.report]
omit = ["napalm_vrp/test/*"]

[tool.pylama]
linters = "mccabe,pep8,pyflakes"
ignore = "D203,C901"
skip = ".tox/*"

[tool.pylama.pep8]
max_line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true